Button-list fixes *fix descenders being cut off *allow these fake buttons to have text wrap +--ion-background-shader +button-lists now have alternating stripes

--- a/src/theme/App.css
+++ b/src/theme/App.css
@@ -295,7 +295,7 @@ i.ipa {
 	background: var(--ion-color-input-bg);
 }
 .virtualLex .lexRow.odd::part(native) {
-	background: #0002;
+	background: var(--ion-background-shader);
 }
 .virtualLex {
 	margin: 0;
@@ -361,6 +361,10 @@ i.ipa {
 	user-select: text !important;
 }
 
+ion-modal ion-item-group.buttonFilled ion-item:nth-of-type(even)::part(native),
+ion-modal ion-list.buttonFilled ion-item:nth-of-type(even)::part(native) {
+	background: var(--ion-background-shader);
+}
 
 @media screen and (max-width: 450px) {
 	ion-tab-bar ion-label {
